[gd_scene load_steps=11 format=3 uid="uid://b3k2kgkp18wn1"]

[ext_resource type="Script" path="res://Systems/Minimap/GDs_Minimap.gd" id="1_3l741"]
[ext_resource type="Texture2D" uid="uid://dlpsshgfxheun" path="res://Cont_UI/UI_Atlas.png" id="2_i627t"]
[ext_resource type="Texture2D" uid="uid://xh84cch52dbq" path="res://Cont_Models/Sector6/Map_Sect6_Minimap.jpg" id="3_1p2ht"]
[ext_resource type="Shader" path="res://Vfx_PostProces/PPE_UI_Blurring.gdshader" id="4_4etqd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2do84"]
atlas = ExtResource("2_i627t")
region = Rect2(468, 763, 42, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_njdjs"]
atlas = ExtResource("2_i627t")
region = Rect2(189, 31, 110, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtuoi"]
atlas = ExtResource("2_i627t")
region = Rect2(477, 694, 24, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_sko7y"]
atlas = ExtResource("2_i627t")
region = Rect2(2, 3, 160, 160)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_28y4u"]
shader = ExtResource("4_4etqd")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/brightness = 0.5
shader_parameter/blur = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_phyva"]
atlas = ExtResource("2_i627t")
region = Rect2(478, 739, 23, 20)

[node name="UI_Minimap" type="Control" node_paths=PackedStringArray("minimap_parent", "circle_mask", "map_texture", "mark", "cam_pivot", "lblDistance")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3l741")
minimap_parent = NodePath("Minimap_Parent")
circle_mask = NodePath("Minimap_Parent/Circle_Mask")
map_texture = NodePath("Minimap_Parent/Circle_Mask/Map_Texture")
mark = NodePath("Minimap_Parent/Circle_Mask/Map_Texture/Mark")
cam_pivot = NodePath("Minimap_Parent/Circle_Mask/Cam_Pivot")
lblDistance = NodePath("Minimap_Parent/DistanceBackground/lbl Distance")

[node name="Minimap_Parent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -341.0
offset_top = -351.0
offset_right = -21.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(1920, 1080)

[node name="Circle_Mask" type="TextureRect" parent="Minimap_Parent"]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_2do84")

[node name="Map_Texture" type="TextureRect" parent="Minimap_Parent/Circle_Mask"]
modulate = Color(1, 1, 1, 0.788235)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(256, 0)
texture = ExtResource("3_1p2ht")
expand_mode = 1
flip_h = true
flip_v = true
metadata/_edit_lock_ = true

[node name="Mark" type="TextureRect" parent="Minimap_Parent/Circle_Mask/Map_Texture"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -51.0
offset_right = 59.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(55, 56)
texture = SubResource("AtlasTexture_njdjs")

[node name="Grid" type="NinePatchRect" parent="Minimap_Parent/Circle_Mask"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i627t")
region_rect = Rect2(64, 305, 62, 62)
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
metadata/_edit_lock_ = true

[node name="Cam_Pivot" type="Control" parent="Minimap_Parent/Circle_Mask"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -137.0
offset_right = 20.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)

[node name="Cam_Icon" type="TextureRect" parent="Minimap_Parent/Circle_Mask/Cam_Pivot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -47.615
offset_right = 24.0
offset_bottom = 10.385
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(256.465, 266.185)
texture = SubResource("AtlasTexture_mtuoi")
metadata/_edit_lock_ = true

[node name="Frame" type="Control" parent="Minimap_Parent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="N" type="Label" parent="Minimap_Parent/Frame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 3.0
offset_right = 20.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "N"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="E" type="Label" parent="Minimap_Parent/Frame"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -17.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "E"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="S" type="Label" parent="Minimap_Parent/Frame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -38.0
offset_right = 20.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "S"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="O" type="Label" parent="Minimap_Parent/Frame"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -17.0
offset_right = 37.0
offset_bottom = 18.0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "O"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="Minimap_Parent/Frame"]
modulate = Color(1, 1, 1, 0.501961)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Minimap_Parent/Frame/Control"]
layout_mode = 1
offset_right = 160.0
offset_bottom = 160.0
texture = SubResource("AtlasTexture_sko7y")
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="Minimap_Parent/Frame/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 120.0
offset_top = 1.52588e-05
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 0
rotation = 1.5708
pivot_offset = Vector2(80, 80)
texture = SubResource("AtlasTexture_sko7y")
metadata/_edit_lock_ = true

[node name="TextureRect3" type="TextureRect" parent="Minimap_Parent/Frame/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = 120.0
offset_right = 280.0
offset_bottom = 280.0
grow_horizontal = 0
grow_vertical = 0
rotation = 3.14159
pivot_offset = Vector2(80, 80)
texture = SubResource("AtlasTexture_sko7y")
metadata/_edit_lock_ = true

[node name="TextureRect4" type="TextureRect" parent="Minimap_Parent/Frame/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -4.57764e-05
offset_top = 120.0
offset_right = 160.0
offset_bottom = 280.0
grow_vertical = 0
rotation = -1.5708
pivot_offset = Vector2(80, 80)
texture = SubResource("AtlasTexture_sko7y")
metadata/_edit_lock_ = true

[node name="DistanceBackground" type="ColorRect" parent="Minimap_Parent"]
material = SubResource("ShaderMaterial_28y4u")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_top = -42.0
offset_right = 33.0
offset_bottom = -12.0
grow_horizontal = 2
pivot_offset = Vector2(33, 15)

[node name="lbl Distance" type="Label" parent="Minimap_Parent/DistanceBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 11)
text = "355"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="LeftFrane" type="NinePatchRect" parent="Minimap_Parent/DistanceBackground"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2
texture = ExtResource("2_i627t")
region_rect = Rect2(498, 476, 10, 31)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_bottom = 3
metadata/_edit_lock_ = true

[node name="RightFrane" type="NinePatchRect" parent="Minimap_Parent/DistanceBackground"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(-1, 1)
pivot_offset = Vector2(4, 15)
texture = ExtResource("2_i627t")
region_rect = Rect2(498, 476, 10, 31)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_bottom = 3
metadata/_edit_lock_ = true

[node name="Arrow" type="TextureRect" parent="Minimap_Parent/DistanceBackground"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_right = 5.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0
rotation = 3.14159
pivot_offset = Vector2(5, 5)
texture = SubResource("AtlasTexture_phyva")
expand_mode = 1
